# astdev-thc

game-client/: package-lock.json  package.json  tsconfig.json  vite.config.js
game-client/public/: game.css  game.html  index.html
game-client/public/assets/animation/: desktop_animation.lottie  game_ai_animation.lottie  game_animation.lottie  iot_network_animation.lottie  mobile_animation.lottie  network.lottie
game-client/public/assets/tiles/: level1.js  level2.js  level3.js
game-client/public/game/: GameManager.js  GameManager.ts  index.js  index.ts
game-client/public/game/Collision/: CollisionBlock.js  CollisionBlock.ts  ConstantCollision.js  ConstantCollision.ts  ShapeCollision.js  ShapeCollision.ts
game-client/public/game/ConnectedPlayers/: ConnectedPlayer.js
game-client/public/game/Door/: Door.js
game-client/public/game/Sign/: Sign.js
game-client/public/game/Stage/: Stage.js  Stage.ts
game-client/public/game/player/: Player.js  Player.ts  PlayerBaseState.js  PlayerBaseState.ts
game-client/public/game/player/State/: FallingState.js  FallingState.ts  IdleState.js  IdleState.ts  JumpingState.js  JumpingState.ts  WalkingState.js  WalkingState.ts
game-client/public/game/utils/: Sprite.js  Sprite.ts
signal-server/: Cargo.toml
signal-server/src/: main.rs
