[package]
name = "signal-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
actix = "0.13.1"
log = "0.4.20"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
actix-rt = "2.9.0"